--- a/package.json
+++ b/package.json
@@ -10,15 +10,22 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kyletozer/api-with-node-v1.git"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/kyletozer/api-with-node-v1/issues"
+  },
+  "homepage": "https://github.com/kyletozer/api-with-node-v1#readme",
   "dependencies": {
+    "bluebird": "^3.4.7",
     "express": "^4.14.0",
     "jade": "^1.11.0",
+    "nodemon": "^1.11.0",
     "twit": "^2.2.5"
-  },
-  "devDependencies": {
-    "nodemon": "^1.11.0"
   }
 }
