--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
   },
   "homepage": "https://github.com/kyletozer/api-with-node-v1#readme",
   "dependencies": {
-    "bluebird": "^3.4.7",
+    "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "jade": "^1.11.0",
+    "morgan": "^1.7.0",
     "nodemon": "^1.11.0",
     "twit": "^2.2.5"
   }
